[package]
name = "stivale2"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
cstr_core = { version = "0.2.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"